# Codini-Projekt

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/codini/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Game.h  LevelDefinitions.h  Model.h  ParticleSystem.h  Renderer.h  main.cpp  native_stubs.cpp
app/src/main/java/com/example/codini/: GameModel.kt  MainActivity.kt
app/src/main/res/drawable/: app_logo.xml  star_empty.xml  star_filled.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/example/codini/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
